# ewor_brainfuck

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Readme.md  bfa_hello_world.bf  bfa_implementation_notes.md  main.py  notes.md  simple_sim.bf
.devcontainer/: Dockerfile  devcontainer.json
examples/: bfa_hello_world_gen.rs  bfa_server.bf  compare.bf  echo.bf  efficiency_test.rs  hello_bfl.rs  hello_world.bf  ping_pong_server.bfl  ping_pong_server.rs  run_bf.rs  simple_ping_pong.rs  simple_socket_test.rs  syscall_print.rs  test_codegen_debug.rs  test_loop_debug.rs
src/: bf.rs  bfl.rs  bfvm.rs  errors.rs  lib.rs  main.rs  syscall_consts.rs  syscall_test.rs
tests/: bfl_features.rs
